Dev setup done. Need ticket assign functionality
