# backend/src/swagger.json
@@ -170,6 +170,9 @@
           "204": {
             "description": "No Content"
           },
+          "304": {
+            "description": "Not Modified"
+          },
           "400": {
             "description": "Bad Request"
           },
@@ -243,6 +246,91 @@
           },
           "401": {
             "description": "Unauthorized"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/bugs/messages/{id}": {
+      "put": {
+        "tags": ["bugs"],
+        "summary": "Request to update Trak resolve bug messages by id.",
+        "description": "A request to update Trak Resolve bug messages.",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "required": true,
+            "schema": {
+              "type": "object",
+              "properties": {
+                "bugId": {
+                  "type": "string"
+                },
+                "message": {
+                  "type": "string"
+                },
+                "isOpen": {
+                  "type": "boolean"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/api/v1/bugs/messages/{user}": {
+      "get": {
+        "tags": ["users"],
+        "summary": "Request Trak resolve user profile messages by id.",
+        "description": "A request for Trak Resolve users to see user messages.",
+        "produces": ["application/json"],
+        "parameters": [
+          {
+            "name": "user",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "401": {
+            "description": "Unauthorized"
+          },
+          "404": {
+            "description": "Not Found"
           },
           "500": {
             "description": "Internal Server Error"
@@ -495,89 +583,6 @@
           },
           "400": {
             "description": "Bad Request"
-          }
-        }
-      }
-    },
-    "/api/v1/users/messages/{id}": {
-      "get": {
-        "tags": ["users"],
-        "summary": "Request Trak resolve user profile messages by id.",
-        "description": "A request for Trak Resolve users to see user messages.",
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
-          }
-        }
-      },
-      "put": {
-        "tags": ["users"],
-        "summary": "Request to update Trak resolve user messages by id.",
-        "description": "A request to update Trak Resolve user messages.",
-        "produces": ["application/json"],
-        "parameters": [
-          {
-            "name": "id",
-            "in": "path",
-            "required": true,
-            "type": "string"
-          },
-          {
-            "name": "body",
-            "in": "body",
-            "required": true,
-            "schema": {
-              "type": "object",
-              "properties": {
-                "bugId": {
-                  "type": "string"
-                },
-                "message": {
-                  "type": "string"
-                },
-                "isOpen": {
-                  "type": "boolean"
-                }
-              }
-            }
-          }
-        ],
-        "responses": {
-          "200": {
-            "description": "OK"
-          },
-          "400": {
-            "description": "Bad Request"
-          },
-          "401": {
-            "description": "Unauthorized"
-          },
-          "404": {
-            "description": "Not Found"
-          },
-          "500": {
-            "description": "Internal Server Error"
           }
         }
       }
